--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,9 @@ rich
 python-docx>=1.1.0
 pypdf>=3.17.0
 openpyxl>=3.1.2
+xlsxwriter>=3.2.0
+pandas>=2.0.0
+lancedb>=0.4.0
+fastembed>=0.1.0
+tantivy>=0.20.0
+pyyamlpython-dotenv
